--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [tool.poetry]
 name = "poet"
 version = "0.1.0"
-description = ""
+description = "Testing poetry in gcp"
+authors = ["patrick.losso@gmail.com"]
 
 packages = [
     { include = "poet" }
