--- a/_cicd/build_wheel.yaml
+++ b/_cicd/build_wheel.yaml
@@ -27,21 +27,24 @@ steps:
   - name: "us-central1-docker.pkg.dev/cloudbuild-testing-354715/docker/docker:6b76af5"
     entrypoint: bash
     args:
-      - "poetry config repositories.python https://us-central1-python.pkg.dev/cloudbuild-testing-354715/python/"
+      - "-c"
+      - |
+        poetry config repositories.python https://us-central1-python.pkg.dev/cloudbuild-testing-354715/python/
   # Run build wheel
   - name: "us-central1-docker.pkg.dev/cloudbuild-testing-354715/docker/docker:6b76af5"
     entrypoint: bash
     args:
       - "-c"
       - |
-        poetry config list
+        poetry config list;
         poetry build -f wheel
   # Publish package
   - name: "us-central1-docker.pkg.dev/cloudbuild-testing-354715/docker/docker:6b76af5"
     entrypoint: bash
     args:
-    - "-c"
+      - "-c"
       - |
-      poetry publish -r python
+      poetry config list;
+        poetry publish -r python
 options:
-  logging: "CLOUD_LOGGING_ONLY"
+  loggig: "CLOUD_LOGGING_ONLY"
