comment out publish step

--- a/_cicd/build_wheel.yaml
+++ b/_cicd/build_wheel.yaml
@@ -39,12 +39,12 @@ steps:
         poetry config list;
         poetry build -f wheel
   # Publish package
-  - name: "us-central1-docker.pkg.dev/cloudbuild-testing-354715/docker/docker:6b76af5"
-    entrypoint: bash
-    args:
-      - "-c"
-      - |
-        poetry config list;
-        poetry publish -r python
+  # - name: "us-central1-docker.pkg.dev/cloudbuild-testing-354715/docker/docker:6b76af5"
+  #   entrypoint: bash
+  #   args:
+  #     - "-c"
+  #     - |
+  #       poetry config list;
+  #       poetry publish -r python
 options:
   logging: "CLOUD_LOGGING_ONLY"
