--- a/_cicd/build_wheel.yaml
+++ b/_cicd/build_wheel.yaml
@@ -45,7 +45,7 @@ steps:
       - "-c"
       - |
         poetry config repositories.python https://us-central1-python.pkg.dev/cloudbuild-testing-354715/python/
-        poetry config http-basic.python "__token__" "${POETRY_PYPI_TOKEN_PYPI}"
+        poetry config http-basic.pypi "__token__" "${POETRY_PYPI_TOKEN_PYPI}"
         poetry config --list;
         poetry publish -r python
 options:
