--- a/.github/workflows/terrafrom-validate.yaml
+++ b/.github/workflows/terrafrom-validate.yaml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - uses: hashicorp/setup-terraform@v2
 
-    - name: Terraform fmt
+    - name: Terraform fmt check
       id: fmt
       run: terraform fmt -check
       continue-on-error: true
